Padding issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html {
 }
 .amsc-logo {
   max-width: 350px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
 }
 h2.centered-heading {
     text-align: center;
